# lumen

./: .gitignore  LICENSE  README.md  build.gradle  package-lock.json  package.json  settings.gradle
.github/workflows/: build.yml  package-windows.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  store.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/components/: ClickGUI.tsx
apps/desktop/src/pages/: AppearancePage.tsx  CreditsPage.tsx  HomePage.tsx  ModBrowserPage.tsx  ProfilesPage.tsx  SettingsPage.tsx  SkinEditorPage.tsx  UpdatesPage.tsx
apps/desktop/src/styles/: global.css
docs/: compatibility.md  development.md  network.md  release-checklist.md  security.md
scripts/: package-ci-notice.mjs  package-local.mjs
src/main/java/com/lumen/: LumenLauncherApp.java
src/main/java/com/lumen/core/: AppPaths.java  ArtifactPlan.java  ArtifactPlanner.java  BackupService.java  CrashReportService.java  JavaRuntimeInfo.java  JavaRuntimeService.java  LaunchCommandBuilder.java  LaunchLogEntry.java  LaunchPlan.java  LaunchService.java  LaunchStage.java  LauncherProfile.java  LoaderType.java  ProfileManager.java  ProfileStore.java  ReleaseLine.java  Severity.java  ValidationIssue.java  VersionDescriptor.java  VersionRepository.java
src/main/resources/com/lumen/: lumen.css
